# PDE-gym

./: .gitignore  README.md  pyproject.toml  test_webgl.py  todo.md
examples/: quickstart.py
pde_gym/: __init__.py  bridge.py  browser.py  env.py  rewards.py
pde_gym/tasks/: __init__.py
pde_gym/vector/: __init__.py
tests/: __init__.py  test_env.py
